@@ -32,7 +32,7 @@ allprojects {
 
     ext {
         annotationVersion = "17.0.0"
-        rlibVersion = "9.6.0"
+        rlibVersion = "9.8.0"
         lombokVersion = '1.18.4'
         springbootVersion = '2.2.0.RELEASE'
         springVersion = '5.1.6.RELEASE'
@@ -86,6 +86,15 @@ allprojects {
     tasks.withType(Test) {
         maxParallelForks = 2
         forkEvery = 100
+        jvmArgs += "--enable-preview"
+    }
+    
+    tasks.withType(JavaCompile) {
+        options.compilerArgs += "--enable-preview"
+    }
+    
+    tasks.withType(GroovyCompile) {
+        options.forkOptions.jvmArgs += "--enable-preview"
     }
     
     processResources {
